--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=8081
 ## MULTIPART (MultipartProperties)
 # Enable multipart uploads
-
+spring.devtools.restart.additional-paths = /path-to-folder
