--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ server.port=8081
 ## MULTIPART (MultipartProperties)
 # Enable multipart uploads
 spring.devtools.restart.additional-paths = /path-to-folder
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
