--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,8 +2,8 @@
 spring:
   datasource:
     url: 'jdbc:postgresql://localhost:5432/testdb'
-    username: 'annagrund'
-    password: 'test'
+    username: 'postgres'
+    password: 'Petrikson28'
 #    driver-class-name: org.postgresql.Driver
   jpa:
     database-platform: 'org.hibernate.dialect.PostgreSQLDialect'
