--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,10 @@ dependencies {
     compile(group: 'org.projectlombok', name: 'lombok', version: '1.18.4')
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
 
+//    compileOnly 'org.projectlombok:lombok'
+//    annotationProcessor 'org.projectlombok:lombok'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
 
