--- a/build.gradle
+++ b/build.gradle
@@ -43,15 +43,17 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 
-    compile(group: 'org.projectlombok', name: 'lombok', version: '1.18.4')
+//    compile(group: 'org.projectlombok', name: 'lombok', version: '1.18.4')
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
 
-//    compileOnly 'org.projectlombok:lombok'
-//    annotationProcessor 'org.projectlombok:lombok'
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+
+    compile 'commons-io:commons-io:2.6'
 
 
 
